--- a/css/custom.css
+++ b/css/custom.css
@@ -390,22 +390,22 @@ main {
 
 @keyframes slide-out {
 	0% {
-		transform: translateY(0%);
+		transform: translateX(0%);
 	}
 
 	100% {
 		opacity: 0;
-		transform: translateY(calc(50% * var(--direction, 1)));
+		transform: translateX(calc(50% * var(--direction, 1)));
 	}
 }
 
 @keyframes slide-in {
 	0% {
 		opacity: 0;
-		transform: translateY(calc(-50% * var(--direction, 1)));
+		transform: translateX(calc(-50% * var(--direction, 1)));
 	}
 
 	100% {
-		transform: translateY(0%);
+		transform: translateX(0%);
 	}
 }
