--- a/css/custom.css
+++ b/css/custom.css
@@ -31,7 +31,7 @@
 .fs-30 {font-size: 2rem !important}
 .fs-32 {font-size: 2.13rem !important; line-height:34px}
 .fs-36 {font-size: 2.4rem !important; line-height: 1.1}
-.fs-40 {font-size: 2.66rem !important; line-height: 1.25}
+.fs-40 {font-size: 2.66rem !important; line-height: 1.1; letter-spacing: -1px}
 .fs-44 {font-size: 2.93rem !important}
 .fs-48 {font-size: 3.2rem !important}
 
@@ -84,6 +84,7 @@ h2 {
 h1 {
     font-size: 3rem;
     margin-bottom: 1rem;
+    letter-spacing: -1px
 }
 
 h2 {
