--- a/css/custom.css
+++ b/css/custom.css
@@ -25,7 +25,7 @@
 .fs-18 {font-size: 1.2rem !important; line-height:24px}
 .fs-20 {font-size: 1.33rem !important}
 .fs-22 {font-size: 1.46rem !important; line-height: 1.1}
-.fs-24 {font-size: 1.6rem !important; line-height:1.9rem;}
+.fs-24 {font-size: 1.6rem !important; line-height:1.9rem}
 .fs-26 {font-size: 1.73rem !important}
 .fs-28 {font-size: 1.86rem !important;}
 .fs-30 {font-size: 2rem !important}
@@ -52,7 +52,7 @@
     --primary: rgb(74, 80, 156);
     --secondary: #222;
     --muted: rgba(226, 222, 222, 0.33);
-    --muted-darker: rgb(102,102,102);
+    --muted-darker: rgb(102,102,102)
 }
 
 html {
@@ -60,7 +60,7 @@ html {
     font-size: 17px;
     line-height: 25px;
     font-weight: 400;
-    color: #525252;
+    color: #525252
 }
 
 blockquote {
@@ -70,7 +70,7 @@ blockquote {
 }
 
 blockquote footer {
-    font-style: italic;
+    font-style: italic
 }
 
 h1, h3 {
@@ -83,6 +83,7 @@ h2 {
 
 h1 {
     font-size: 3rem;
+    line-height: 1;
     margin-bottom: 1rem;
     letter-spacing: -1px
 }
@@ -90,46 +91,46 @@ h1 {
 h2 {
     font-size: 2.25rem;
     margin-top: .5rem;
-    font-weight: 400;
+    font-weight: 400
 }
 
 h3 {
     font-size: 1.5rem;
-    text-transform: none;
+    text-transform: none
 }
 
 h3 a {
     text-decoration: underline dotted 1px;
-    text-underline-offset: 4px;
+    text-underline-offset: 4px
 }
 
 h3 a:hover {
     color:inherit;
-    text-decoration: underline solid 1px;
+    text-decoration: underline solid 1px
 }
 
 .uk-navbar-nav > li > a, .uk-button {
-    text-transform: none;
+    text-transform: none
 }
 
 .uk-navbar-item > a {
     padding: 6px 12px;
     border-radius: 80px;
-    color: #333;
+    color: #333
 }
 
 .uk-navbar-item > a:hover {
     background-color: #ddd;
-    color: #333;
+    color: #333
 }
 
 .uk-nav-default > li > a:hover {
     background-color: var(--muted);
-    color: var(--primary);
+    color: var(--primary)
 }
 .uk-logo {
     font-size:1.2rem;
-    line-height:2.5rem;
+    line-height:2.5rem
 }
 
 .uk-logo > a:hover {
@@ -140,7 +141,7 @@ h3 a:hover {
 .uk-text-small {
     font-size: 0.75rem;
     font-weight: 700;
-    line-height: 1.5;
+    line-height: 1.5
 }
 
 .uk-text-primary {
@@ -155,7 +156,7 @@ h3 a:hover {
 ::selection {
     background: rgba(74, 80, 156, 1);
     color: #fff;
-    text-shadow: none;
+    text-shadow: none
 }
 
 .uk-button {
@@ -164,7 +165,7 @@ h3 a:hover {
 }
 
 .uk-text-bold {
-  font-weight: 600;
+  font-weight: 600
 }
 
 /* broken :|
@@ -184,22 +185,22 @@ h3 a:hover {
 
 */
 .uk-padding {
-  padding: 24px;
+  padding: 24px
 }
 
 .uk-card-hover:not(.uk-card-default):not(.uk-card-primary):not(.uk-card-secondary):hover {
-    box-shadow: 2px 8px 14px rgba(0, 0, 0, 0.10);
+    box-shadow: 2px 8px 14px rgba(0, 0, 0, 0.10)
 }
 
 .uk-border-rounded {
-  border-radius: 4px;
+  border-radius: 4px
 }
 .uk-border-rounded-medium {
-  border-radius: 8px;
+  border-radius: 8px
 }
 
 .uk-border-rounded-large {
-  border-radius: 16px;
+  border-radius: 16px
 }
 
 .uk-navbar-nav > li > a,
@@ -211,23 +212,23 @@ h3 a:hover {
 /* Desktop and bigger */
 @media (min-width: 1200px) {
   .uk-padding {
-    padding: 24px;
+    padding: 24px
   }
 }
 /* Small
  ========================================================================== */
 .uk-padding-small {
-  padding: 16px;
+  padding: 16px
 }
 /* Large
  ========================================================================== */
 .uk-padding-large {
-  padding: 40px;
+  padding: 40px
 }
 /* Desktop and bigger */
 @media (min-width: 1200px) {
   .uk-padding-large {
-    padding: 70px;
+    padding: 70px
   }
 }
 
@@ -239,30 +240,30 @@ h3 a:hover {
 ========================================================================== */
 
 .pill {
-    border-radius: 5px;
+    border-radius: 5px
 }
 /* Phone landscape and bigger */
 @media (min-width: 640px) {
     .pill {
-        border-radius: 500px;
+        border-radius: 500px
     }
 }
 /* Tablet landscape and bigger */
 @media (min-width: 960px) {
     .pill {
-        border-radius: 500px;
+        border-radius: 500px
     }
 }
 /* Desktop and bigger */
 @media (min-width: 1200px) {
     .pill {
-        border-radius: 500px;
+        border-radius: 500px
     }
 }
 /* Large screen and bigger */
 @media (min-width: 1600px) {
     .pill {
-        border-radius: 500px;
+        border-radius: 500px
     }
 }
 
@@ -277,7 +278,7 @@ h3 a:hover {
 
 .cool {
     --gc1: 0, 113, 227,;
-    --gc2: 0, 119, 237,;
+    --gc2: 0, 119, 237,
 }
 
 .button-white {
@@ -289,7 +290,7 @@ h3 a:hover {
 }
 
 .button-white > div > div > span, .warm > div > div > span {
-    color: rgba(var(--colorHover) 1);    
+    color: rgba(var(--colorHover) 1)
 }
 
 
@@ -298,14 +299,14 @@ h3 a:hover {
     text-align: center;
     transition: 0.5s;
     background-size: 800% auto;
-    color: rgba(var(--color) 1);            
+    color: rgba(var(--color) 1)  
 }
 
 .pulse:hover {
     animation: animation 2s cubic-bezier(0.052, 0.805, 0.267, 1.003) 0s 1 normal none;
     animation-iteration-count: infinite;
     background-color: rgba(var(--gc2) 1);
-    color: rgba(var(--colorHover) 1) !important;
+    color: rgba(var(--colorHover) 1) !important
 }
 
 @keyframes animation {
@@ -319,13 +320,13 @@ h3 a:hover {
 
     }
     100% {
-        box-shadow: 0 0 0 15px rgba(var(--gc2) 0.15);
+        box-shadow: 0 0 0 15px rgba(var(--gc2) 0.15)
     }
 }
 
 
 .as {
-    font-family: "Albert Sans", sans-serif;
+    font-family: "Albert Sans", sans-serif
 }
 
 .in {
@@ -350,15 +351,15 @@ p.in {
 }
 
 .uk-background-muted {
- background-color: var(--muted);
+ background-color: var(--muted)
 }
 
 .uk-background-muted-darker {
- background-color: var(--muted-darker);
+ background-color: var(--muted-darker)
 }
 
 .uk-padding-xsmall {
-  padding: 8px;
+  padding: 8px
 }
 
 /* From https://css.glass */
@@ -367,14 +368,14 @@ p.in {
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(6px);
     -webkit-backdrop-filter: blur(6px);
-    border: 1px solid rgba(255, 255, 255, 0.3);
+    border: 1px solid rgba(255, 255, 255, 0.3)
 }
 .dark-frost {
     /* From https://css.glass */
     background: rgba(0, 0, 0, 0.2);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(6px);
-    -webkit-backdrop-filter: blur(6px);
+    -webkit-backdrop-filter: blur(6px)
 }
 
 
@@ -383,23 +384,23 @@ p.in {
 @media (prefers-reduced-motion:
     no-preference) {
     @view-transition {
-        navigation: auto;
+        navigation: auto
     }
 }
 
 ::view-transition-old(page) {
-    animation: fade 0.2s linear forwards;
+    animation: fade 0.2s linear forwards
     }
 
 ::view-transition-new(page) {
-    animation: fade 0.3s linear reverse;
+    animation: fade 0.3s linear reverse
 }
 
 @keyframes fade {
     from {
-        opacity: 1;
+        opacity: 1
     }
     to {
-        opacity: 0;
+        opacity: 0
     }
 }
