--- a/css/custom.css
+++ b/css/custom.css
@@ -22,6 +22,7 @@
 .fs-14 {font-size: .95rem !important; line-height:1.5}
 .fs-15 {font-size: 1rem !important}
 .fs-16 {font-size: 1.06rem !important; line-height:1.4}
+.fs-17 {font-size: 1.1rem !important; line-height:1.3}
 .fs-18 {font-size: 1.2rem !important; line-height:24px}
 .fs-20 {font-size: 1.33rem !important}
 .fs-22 {font-size: 1.46rem !important; line-height: 1.1}
@@ -82,8 +83,8 @@ h2 {
 }
 
 h1 {
-    font-size: 3rem;
-    line-height: 1;
+    font-size: 2.4rem;
+    line-height: 1.1;
     margin-bottom: 1rem;
     letter-spacing: -1px
 }
