--- a/css/custom.css
+++ b/css/custom.css
@@ -18,7 +18,7 @@
 @charset "utf-8";
 
 .fs-10 {font-size: .66rem !important}
-.fs-12 {font-size: .8rem !important}
+.fs-12 {font-size: .8rem !important; line-height:1.3}
 .fs-14 {font-size: .95rem !important; line-height:1.5}
 .fs-15 {font-size: 1rem !important}
 .fs-16 {font-size: 1.06rem !important; line-height:1.4}
