--- a/css/custom.css
+++ b/css/custom.css
@@ -208,7 +208,7 @@ box-shadow: none
   padding: 24px
 }
 
-.uk-card-hover:not(.uk-card-default):not(.uk-card-primary):not(.uk-card-secondary):hover {
+.uk-slide-active .uk-active > div, .uk-card-hover:not(.uk-card-default):not(.uk-card-primary):not(.uk-card-secondary):hover {
     box-shadow: 2px 8px 14px rgba(0, 0, 0, 0.10)
 }
 
@@ -284,6 +284,16 @@ box-shadow: none
 @media (min-width: 1600px) {
     .pill {
         border-radius: 500px
+    }
+}
+
+.uk-slide-active.uk-active > div {
+    box-shadow: 2px 8px 14px rgba(0, 0, 0, 0.10)
+}
+
+@media (min-width: 960px) {
+    .uk-slide-active.uk-active > div {
+        box-shadow: none
     }
 }
 
