--- a/css/custom.css
+++ b/css/custom.css
@@ -53,7 +53,7 @@
     --primary: rgb(74, 80, 156);
     --secondary: #222;
     --muted: rgba(226, 222, 222, 0.33);
-    --muted-darker: rgb(102,102,102)
+    --muted-darker: rgb(102,102,102);
 }
 
 html {
@@ -176,6 +176,16 @@ box-shadow: none
 .uk-box-shadow-inset {
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08) inset;
 }
+
+.uk-subnav-pill > .uk-active > a {
+    background-color: rgba(74, 80, 156,1) 
+}
+
+.uk-subnav-pill > * > a:hover:not(.uk-subnav-pill > .uk-active > a) {
+    background-color: rgba(74, 80, 156,0.5);
+    color: #fff
+}
+    
 ::selection {
     background: rgba(74, 80, 156, 1);
     color: #fff;
