--- a/css/custom.css
+++ b/css/custom.css
@@ -117,6 +117,9 @@ h3 a:hover {
     background-color: #ddd;
     color: #333
 }
+.uk-navbar-container:not(.uk-navbar-transparent) {
+    background: #e9e9e9;
+}
 .uk-nav-default > li > a:hover {
     background-color: var(--muted);
     color: var(--primary)
