--- a/css/custom.css
+++ b/css/custom.css
@@ -123,9 +123,11 @@ h3 a:hover {
 .uk-navbar-container:not(.uk-navbar-transparent) {
     background: #e9e9e9;
 }
+.uk-nav-default > li > a {
+    color: var(--text);
+}
 .uk-nav-default > li > a:hover {
-    background-color: var(--muted);
-    color: var(--primary)
+    color: var(--secondary)
 }
 .uk-label {
     text-transform: none;
@@ -140,11 +142,11 @@ h3 a:hover {
     color:#525252 !important;
     font-weight: 500
 }
-.uk-logo {
-    font-size:1.1rem;
+.uk-navbar-item > .uk-logo {
+    font-size:1.2rem;
     line-height:2.5rem;
     font-weight: 500;
-    color: var(--text)
+    color: #000
 }
 a.uk-logo > img {
     max-height:36px;
