--- a/css/custom.css
+++ b/css/custom.css
@@ -391,12 +391,16 @@ p.in {
     -webkit-backdrop-filter: blur(6px);
     border: 1px solid rgba(255, 255, 255, 0.3)
 }
+
 .dark-frost {
     /* From https://css.glass */
-    background: rgba(0, 0, 0, 0.2);
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(6px);
-    -webkit-backdrop-filter: blur(6px)
+    background: rgba(0, 0, 0, 1);
+    backdrop-filter: blur(60px);
+    -webkit-backdrop-filter: blur(60px);
+    -webkit-mask-image: linear-gradient(to top, rgba(0,0,0,1), rgba(0,0,0,0));
+      -webkit-mask-size: 100% 80%;
+      -webkit-mask-repeat: no-repeat;
+      -webkit-mask-position: left bottom;
 }
 
 .typing {
